<resources>
    <string name="app_name">Laboratorio-Retrofit</string>

    <string name="btn_obtener_datos">Obtener Datos</string>
    <string name="id_buscar">Id a buscar</string>
    <string name="btn_obtener_dato">Obtener Dato</string>
    <string name="btn_habilitar_envio">Habilitar Envio de Datos</string>

    <string name="txt_id">Id</string>
    <string name="txt_user_id">UserId</string>
    <string name="txt_title">Title</string>
    <string name="txt_body">Body</string>
    <string name="btn_enviar">Enviar</string>
</resources>